crates/frust-tui/tests/snapshots/snapshots__project_switcher_open_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ bubblebench ▾ · frust 0.1.0 · ◌ checking…                                ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
╭────────────────────────╮                                                                          
│   bubblebench          │  Dashboard                                                               
│ ▸ huddle               │  ━━━━━━━━━━                                                              
╰────────────────────────╯                                                                          
 DEVICES ↻ R             │  No session running — start a run to open a log tab here.                
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   none running          │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · i            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  o run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
