crates/frust-tui/tests/snapshots/snapshots__run_config_modal_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &run_config_modal_state())"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES (1) ↻ r         │                                                                          
    [x] ● OnePlus 9╭ Run · huddle ──────────────────────────────────────────────╮re.                
  ▸ [ ] ● Pixel 7 a│                                                            │▓▓                 
    [ ] ● iPhone SE│  Targets                                                   │▓▓                 
                   │    [ ] desktop                                             │▓▓                 
 SESSIONS          │    [x] OnePlus 9                                           │▓▓                 
   none running    │    [ ] Pixel 7                                             │▓▓                 
                   │    [ ] iPhone SE                                           │▓▓                 
 ACTIONS           │                                                            │▓▓                 
   New project · n │  Mode     ‹ release ›                                      │▓▓                 
   Add plugin · a  │  Flavor   paid                                             │▓▓                 
   Doctor · d      │  Defines  FRUST_TRACE=1█                                   │▓▓                 
   Build · b       │                                                            │▓▓                 
   Clean · c       │   Launch (1)     Cancel                                    │▓▓                 
                   │  Space toggle · ←/→ mode · Tab next · Enter launch · Esc   │▓▓                 
                   ╰────────────────────────────────────────────────────────────╯▓▓                 
                     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                 
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
