crates/frust-tui/tests/snapshots/snapshots__select_mode_skips_hidden_lines_under_a_level_filter_120x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_with_selection_marks(120, 30, &state)"
---
    ⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                         ▶ Run    ⚒ Build 
    ━━━━━━━━                                                                                                                
                                                                                                                            
     PROJECTS                │huddle:  1 ▶ desktop                                                                          
SEL   ▸ huddle               │ W 12:00:04 [app]    warning: unused variable `x`                                             
SEL                          │ E 12:00:06 [app]    error: texture upload failed                                             
     DEVICES ↻ r             │                                                                                              
       none found            │                                                                                              
                             │                                                                                              
     SESSIONS                │                                                                                              
       huddle                │                                                                                              
       ▸ ▶ desktop           │                                                                                              
                             │                                                                                              
     ACTIONS                 │                                                                                              
       New project · n       │                                                                                              
       Add plugin · a        │                                                                                              
       Doctor · i            │                                                                                              
       Build · b             │                                                                                              
       Clean                 │                                                                                              
       MCP off · M           │                                                                                              
       DAP off · D           │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │‖ scrolled  ·  wrap:off  ·  y copy ⏷warn+ ·6  x stop · f follow · w wrap · / search · l filter
    ● 1 running  │  SELECT · 2 lines · ↑↓/jk extend · click sets anchor/range · y copy · Esc exit                  [mouse ✓]
