crates/frust-tui/tests/snapshots/snapshots__select_mode_three_line_range_120x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_with_selection_marks(120, 30, &state)"
---
    ⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                         ▶ Run    ⚒ Build 
    ━━━━━━━━                                                                                                                
                                                                                                                            
     PROJECTS                │huddle:  1 ▶ desktop                                                                          
      ▸ huddle               │   12:00:00 [app]       Compiling huddle v0.1.0                                               
                             │   12:00:01 [app]        Finished dev profile                                                 
     DEVICES ↻ r             │   12:00:02 [app]         Running `target/debug/huddle`                                       
       none found            │   12:00:03 [app]    app: booting up                                                          
                             │ W 12:00:04 [app]    warning: unused variable `x`                                             
SEL  SESSIONS                │   12:00:05 [app]    app: frame 1 rendered                                                    
SEL    huddle                │ E 12:00:06 [app]    error: texture upload failed                                             
SEL    ▸ ▶ desktop           │   12:00:07 [app]    app: recovering                                                          
                             │                                                                                              
     ACTIONS                 │                                                                                              
       New project · n       │                                                                                              
       Add plugin · a        │                                                                                              
       Doctor · d            │                                                                                              
       Build · b             │                                                                                              
       Clean · c             │                                                                                              
       MCP off · M           │                                                                                              
       DAP off · D           │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │                                                                                              
                             │‖ scrolled  ·  wrap:off  ·  y copy            x stop · f follow · w wrap · / search · l filter
    ● 1 running  │  SELECT · 3 lines · ↑↓/jk extend · click sets anchor/range · y copy · Esc exit                  [mouse ✓]
