crates/frust-tui/tests/snapshots/snapshots__session_build_phase_known_xterm256_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string_at(100, 30, &state, ColorDepth::Xterm256)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ⠹ Pixel 7                                                      
  ▸ huddle               │ Compiling frust-core (41/210)                                            
                         │   12:00:00 [app]       Compiling frust-core v0.3.1 (41/210)              
 DEVICES ↻ r             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ⠹ Pixel 7           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
