crates/frust-tui/tests/snapshots/snapshots__session_log_built_artifacts_130x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(130, 30, &built_session_state())"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                                   ▶ Run    ⚒ Build 
━━━━━━━━                                                                                                                          
                                                                                                                                  
 PROJECTS                │huddle:  1 ✓ build apk                                                                                  
  ▸ huddle               │Building `it.f0x.huddle`…                                                                               
                         │Built: /tmp/huddle/android/app/build/outputs/apk/release/app.apk                                        
 DEVICES ↻ r             │                                                                                                        
   none found            │                                                                                                        
                         │                                                                                                        
 SESSIONS                │                                                                                                        
   huddle                │                                                                                                        
   ▸ ✓ build apk         │                                                                                                        
                         │                                                                                                        
 ACTIONS                 │                                                                                                        
   New project · n       │                                                                                                        
   Doctor · d            │                                                                                                        
   Build · b             │                                                                                                        
   Clean · c             │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │                                                                                                        
                         │● follow  ·  wrap:off  ·  1 built · c copy path                    x stop · f follow · w wrap · / search
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                                              [mouse ✓]
